Organized swagger documentation
